--- a/index.html
+++ b/index.html
@@ -12,24 +12,29 @@
 
   <body>
     <div class="container">
-      <div class="calculator">
-        <table>
-          <tr>
-            <td>Drawing Elevation:</td>
-            <td><input type="text" id=dwg-elev></td>
-          </tr>
-          <tr>
-            <td>Site Datum:</td>
-            <td><input type="text" id=site-datum></td>
-          </tr>
-          <tr>
-            <td>Service Invert Level:</td>
-            <td><input type="text" id=site-il></td>
-          </tr>
-        </table>
-        <button class="btn-primary" onclick="calculate()">Calculate</button>
-        <p id="result"></p>
+      <div>
+        <img src="desl.png" alt="dornan engineering" width="100%" height="200">
       </div>
+
+      <table>
+        <tr><td>Drawing Elevation(mm):</td></tr>
+        <tr><td><input type="text" id=dwg-elev></td></tr>
+
+        <tr><td>Site Datum(mm):</td></tr>
+        <tr><td><input type="text" id=site-datum></td></tr>
+
+        <tr><td>Service Elevation(mm):</td></tr>
+        <tr><td><input type="text" id=site-il></td></tr>
+
+        <tr>
+          <td>
+            <button class="btn-primary" onclick="calculate()">Calculate</button>
+          </td>
+        </tr>
+
+        <tr><td>Elevation from datum(mm):</td></tr>
+        <tr><td id="result"></td></tr>
+      </table>
     </div>
 
     <script>
@@ -41,9 +46,9 @@
         let result = parseInt(siteIl) - (parseInt(siteDatum) - parseInt(dwgElev));
 
         if(!isNaN(result)) {
-          document.getElementById("result").innerHTML = `Elevation From Datum: ${result}`;
+          document.getElementById("result").innerHTML = result;
         } else {
-          document.getElementById("result").innerHTML = "Incorrect input - please check input values";
+          document.getElementById("result").innerHTML = "Error";
         }
       }
     </script>
