worked on stylef

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
       <table>
         <tr><td>Drawing Elevation(mm):</td></tr>
-        <tr><td><input type="text" id=dwg-elev></td></tr>
+        <tr><td><input type="text" pattern="[0-9]*" id=dwg-elev></td></tr>
 
         <tr><td>Site Datum(mm):</td></tr>
-        <tr><td><input type="text" id=site-datum></td></tr>
+        <tr><td><input type="text" pattern="[0-9]*" id=site-datum></td></tr>
 
         <tr><td>Service Elevation(mm):</td></tr>
-        <tr><td><input type="text" id=site-il></td></tr>
+        <tr><td><input type="text" pattern="[0-9]*" id=site-il></td></tr>
 
         <tr>
           <td>
