--- a/index.html
+++ b/index.html
@@ -8,33 +8,55 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="/images/001-compass.png">
+    <!-- app icon for ios -->
+    <link rel="apple-touch-icon" href="/images/compass.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/images/compass.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/compass.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="/images/compass.png">
   </head>
 
   <body>
     <div class="container">
-      <div>
-        <img src="desl.png" alt="dornan engineering" width="100%" height="200">
+      <div class="calculator">
+        <div>
+          <img src="images/desl.png" alt="dornan engineering" width="100%" id="desl">
+        </div>
+
+        <table>
+          <tr><td>Drawing Elevation(mm):</td></tr>
+          <tr><td><input type="text" pattern="[0-9]*" id=dwg-elev></td></tr>
+
+          <tr><td>Site Datum(mm):</td></tr>
+          <tr><td><input type="text" pattern="[0-9]*" id=site-datum></td></tr>
+
+          <tr><td>Service Elevation(mm):</td></tr>
+          <tr><td><input type="text" pattern="[0-9]*" id=site-il></td></tr>
+
+          <tr>
+            <td>
+              <button class="btn-primary" onclick="calculate()">Calculate</button>
+            </td>
+          </tr>
+
+          <tr><td>Elevation from datum(mm):</td></tr>
+          <tr><td id="result"></td></tr>
+        </table>
       </div>
 
-      <table>
-        <tr><td>Drawing Elevation(mm):</td></tr>
-        <tr><td><input type="text" pattern="[0-9]*" id=dwg-elev></td></tr>
+      <footer>
+        <div class="jh">
+          <p>Powered by </p>
+          <a href="https://www.johnhiggins.io">
+            <img src="/images/JH Logo transparent.png" alt="JH technologies" height="100vh">
+          </a>
+          <p> technologies</p>
+        </div>
 
-        <tr><td>Site Datum(mm):</td></tr>
-        <tr><td><input type="text" pattern="[0-9]*" id=site-datum></td></tr>
+        <p><small>Icon made by Freepik from <a href="https://www.flaticon.com">www.flaticon.com</a></small></p>
+      </footer>
 
-        <tr><td>Service Elevation(mm):</td></tr>
-        <tr><td><input type="text" pattern="[0-9]*" id=site-il></td></tr>
-
-        <tr>
-          <td>
-            <button class="btn-primary" onclick="calculate()">Calculate</button>
-          </td>
-        </tr>
-
-        <tr><td>Elevation from datum(mm):</td></tr>
-        <tr><td id="result"></td></tr>
-      </table>
     </div>
 
     <script>
@@ -47,8 +69,10 @@
 
         if(!isNaN(result)) {
           document.getElementById("result").innerHTML = result;
+          // document.getElementById("result").id = "result";
         } else {
           document.getElementById("result").innerHTML = "Error";
+          // document.getElementById("result").id = "error";
         }
       }
     </script>
