--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="jh">
           <p>Powered by </p>
           <a href="https://www.johnhiggins.io">
-            <img src="/images/JH Logo transparent.png" alt="JH technologies" height="100vh">
+            <img src="/images/JH-Logo-transparent.png" alt="JH technologies" height="100vh">
           </a>
           <p> technologies</p>
         </div>
