--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" href="/images/001-compass.png">
+    <link rel="icon" href="images/001-compass.png">
     <!-- app icon for ios -->
-    <link rel="apple-touch-icon" href="/images/compass.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/images/compass.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/compass.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="/images/compass.png">
+    <link rel="apple-touch-icon" href="images/compass.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/compass.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/compass.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="images/compass.png">
   </head>
 
   <body>
@@ -49,7 +49,7 @@
         <div class="jh">
           <p>Powered by </p>
           <a href="https://www.johnhiggins.io">
-            <img src="/images/JH-Logo-transparent.png" alt="JH technologies" height="100vh">
+            <img src="images/JH-Logo-transparent.png" alt="JH Technologies" height="100vh">
           </a>
           <p> technologies</p>
         </div>
