added jh branding

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <div>
           <img src="images/desl.png" alt="dornan engineering" width="100%" id="desl">
         </div>
+        <div class="jh">
+          <p>Powered by   </p>
+          <a href="https://www.johnhiggins.io">
+            <img src="images/JH-Logo-DESL-Blue.png" alt="JH Technologies" height="80vh">
+          </a>
+          <p>technologies</p>
+        </div>
 
         <table>
           <tr><td>Drawing Elevation(mm):</td></tr>
@@ -40,19 +47,19 @@
             </td>
           </tr>
 
-          <tr><td>Elevation from datum(mm):</td></tr>
+          <tr><td>Elevation from Datum(mm):</td></tr>
           <tr><td id="result"></td></tr>
         </table>
       </div>
 
       <footer>
-        <div class="jh">
+        <!-- <div class="jh">
           <p>Powered by </p>
           <a href="https://www.johnhiggins.io">
             <img src="images/JH-Logo-transparent.png" alt="JH Technologies" height="100vh">
           </a>
           <p> technologies</p>
-        </div>
+        </div> -->
 
         <p><small>Icon made by Freepik from <a href="https://www.flaticon.com">www.flaticon.com</a></small></p>
       </footer>
