--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="images/001-compass.png">
     <!-- app icon for ios -->
-    <link rel="apple-touch-icon" href="images/compass.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="images/compass.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/compass.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="images/compass.png">
+    <link rel="apple-touch-icon" href="images/001-compass.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/001-compass.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/001-compass.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="images/001-compass.png">
   </head>
 
   <body>
