--- a/index.html
+++ b/index.html
@@ -9,20 +9,24 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" href="images/desl-logo.png">
+    <link rel="icon" href="images/001-compass.png">
     <!-- app icon for ios -->
-    <link rel="apple-touch-icon" href="images/desl-logo.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="images/desl-logo.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/desl-logo.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="images/desl-logo.png">
+    <link rel="apple-touch-icon" href="images/001-compass.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/001-compass.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/001-compass.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="images/001-compass.png">
   </head>
 
   <body>
     <div class="container">
 
       <div class="banner">
-        <div>
-          <img src="images/desl.png" alt="dornan engineering" width="100%" id="desl">
+        <div class="d-flex justify-content-between align-items-center">
+          <img id="compass" src="images/001-compass.png" alt="compass">
+          <div class="d-flex flex-column" style="color: #0165A4">
+            <h1>Datum</h1>
+            <h1>Calculator</h1>
+          </div>
         </div>
         <div class="jh">
           <p>Powered by   </p>
